build: 修改nginx.conf的靜態文件目錄名稱

--- a/image/frontend/nginx.conf
+++ b/image/frontend/nginx.conf
@@ -15,11 +15,11 @@ http {
   sendfile        on;
   keepalive_timeout  65;
   server {
-    listen       3000;
+    listen       4173;
     server_name  localhost;
 
     location / {
-      root   /app/public;  # 指向靜態文件的目錄
+      root   /app;  # 指向靜態文件的目錄
       index  index.html;
       try_files $uri $uri/ /index.html;  # 支援 Nuxt 的 SPA 路由模式
     }
